WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284027
[TextureMapper] Polygon clipping performance is extremely slow
https://bugs.webkit.org/show_bug.cgi?id=284027
Summary
[TextureMapper] Polygon clipping performance is extremely slow
Jani Hautakangas
Reported
2024-12-04 00:29:28 PST
Rendering complex preserve-3D scenes might involve a lot of layer splitting. Layer split rendering is achieved with polygon clipping. These splits are handled using polygon clipping, but the current implementation is inefficient. Each clip operation clears the full stencil buffer and masks the clipped part using separate vertex buffer objects that are allocated on demand. This places significant stress on the GPU and on hardware like rpi3 it completely chokes the rendering pipeline. To address this issue, polygon clip vertices for preserve-3d scenes should be loaded to the GPU only once, leveraging cached VBOs. Additionally, stencil buffer clearing should be optimized using scissors to restrict stencil clears to relevant areas, avoiding full-buffer operations.
Attachments
Add attachment
proposed patch, testcase, etc.
Jani Hautakangas
Comment 1
2024-12-07 08:36:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37596
EWS
Comment 2
2024-12-08 13:07:23 PST
Committed
287519@main
(3440db247780): <
https://commits.webkit.org/287519@main
> Reviewed commits have been landed. Closing PR #37596 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug