Source/WebCore/platform/graphics/texmap/TextureMapper.h
@@ -28,6 +28,7 @@
 #include "IntRect.h"
 #include "IntSize.h"
 #include "TextureMapperGLHeaders.h"
+#include "TextureMapperGPUBuffer.h"
 #include "TransformationMatrix.h"
 #include <array>
 #include <wtf/OptionSet.h>
@@ -39,10 +40,11 @@
 
 namespace WebCore {
 
+class ClipPath;
 class TextureMapperGLData;
+class TextureMapperGPUBuffer;
 class TextureMapperShaderProgram;
 class FilterOperations;
-class FloatPolygon;
 class FloatRoundedRect;
 enum class TextureMapperFlags : uint16_t;
 
@@ -78,7 +80,7 @@ public:
     void bindSurface(BitmapTexture* surface);
     BitmapTexture* currentSurface();
     void beginClip(const TransformationMatrix&, const FloatRoundedRect&);
-    void beginClip(const TransformationMatrix&, const FloatPolygon&);
+    void beginClip(const TransformationMatrix&, const ClipPath&);
     WEBCORE_EXPORT void beginPainting(FlipY = FlipY::No, BitmapTexture* = nullptr);
     WEBCORE_EXPORT void endPainting();
     void endClip();
@@ -97,6 +99,8 @@ public:
 #if USE(GRAPHICS_LAYER_WC)
     WEBCORE_EXPORT void releaseUnusedTexturesNow();
 #endif
+
+    Ref<TextureMapperGPUBuffer> acquireBufferFromPool(size_t, TextureMapperGPUBuffer::Type);
 
 private:
     bool isInMaskMode() const { return m_isMaskMode; }
